components/policies-rd/rings/ring-0/base/base-snapshot/kueue/deny-on-validation-error/.chainsaw-test/resources/pipelinerun_without_validation_error.yaml
apiVersion: tekton.dev/v1
kind: PipelineRun
metadata:
  name: pipelinerun-without-validation-error
spec:
  pipelineRef:
    name: build-pipeline
  params:
    - name: build-platforms
      value:
        - "linux/amd64"
        - "linux/arm64"
